[gd_scene load_steps=12 format=3 uid="uid://cea6twjuqri8r"]

[ext_resource type="Script" uid="uid://mqvlo03qekmt" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/BaseManagementPanel/parts/base_section.gd" id="1_wex4x"]
[ext_resource type="FontFile" uid="uid://dlia1t71max12" path="res://Fonts/PixelOperator.ttf" id="2_4k3bo"]
[ext_resource type="PackedScene" uid="uid://cbkmvlrdq81vr" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/BaseManagementPanel/parts/BaseSectionItem.tscn" id="3_oqfi0"]
[ext_resource type="FontFile" uid="uid://cf1pm48y6jlcm" path="res://Fonts/RasterForgeRegular-JpBgm.ttf" id="4_wex4x"]
[ext_resource type="PackedScene" uid="uid://c7n7pxhkwpt0k" path="res://UI/SvgIcon/SVGIcon.tscn" id="5_4k3bo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wex4x"]

[sub_resource type="LabelSettings" id="LabelSettings_mdmm6"]
font = ExtResource("2_4k3bo")
font_color = Color(0, 0, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 0.2)
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.235294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4k3bo"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oqfi0"]
bg_color = Color(0.433333, 0.15, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wex4x"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_4k3bo"]
font = ExtResource("4_wex4x")
font_size = 32
outline_color = Color(0, 0, 0, 0.615686)
shadow_size = 0
shadow_offset = Vector2(2, 2)

[node name="BaseSection" type="PanelContainer"]
offset_top = 74.0
offset_right = 130.0
offset_bottom = 74.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_wex4x")
script = ExtResource("1_wex4x")
values = [0, 1, 3, 5]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 2

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Section"
label_settings = SubResource("LabelSettings_mdmm6")
uppercase = true

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/Header"]
layout_mode = 2
size_flags_horizontal = 0
text = "LVL 1"
label_settings = SubResource("LabelSettings_mdmm6")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 9.0
offset_right = 140.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_4k3bo")
theme_override_styles/fill = SubResource("StyleBoxFlat_oqfi0")
max_value = 1.0
show_percentage = false

[node name="Items" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BaseSectionItem" parent="MarginContainer/VBoxContainer/HBoxContainer/Items" instance=ExtResource("3_oqfi0")]
layout_mode = 2
block_color = Color(0.28, 0.14, 0.42, 1)
is_active = true

[node name="BaseSectionItem2" parent="MarginContainer/VBoxContainer/HBoxContainer/Items" instance=ExtResource("3_oqfi0")]
layout_mode = 2
block_color = Color(0.28, 0.14, 0.42, 1)
amount_val = 1

[node name="BaseSectionItem3" parent="MarginContainer/VBoxContainer/HBoxContainer/Items" instance=ExtResource("3_oqfi0")]
layout_mode = 2
block_color = Color(0.28, 0.14, 0.42, 1)
amount_val = 3

[node name="BaseSectionItem4" parent="MarginContainer/VBoxContainer/HBoxContainer/Items" instance=ExtResource("3_oqfi0")]
layout_mode = 2
block_color = Color(0.28, 0.14, 0.42, 1)
amount_val = 5

[node name="Total" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Total"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wex4x")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Total/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5

[node name="TotalVal" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Total/PanelContainer/MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_4k3bo")
horizontal_alignment = 1

[node name="ActiveControl" type="Control" parent="."]
visible = false
layout_mode = 2

[node name="SVGIcon" parent="ActiveControl" instance=ExtResource("5_4k3bo")]
custom_minimum_size = Vector2(10, 15)
layout_mode = 0
offset_left = -6.0
offset_top = 38.0
offset_right = 4.0
offset_bottom = 53.0
icon = 10
icon_color = Color(0, 0, 0, 1)
icon_size = Vector2(10, 15)
